# fast-transfer-entropy

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: fast_transfer_entropy.hpp
tests/: compile_commands.json  test_entropy.cpp  test_transfer_entropy.cpp  test_tree.cpp
